--- a/style.css
+++ b/style.css
@@ -1,61 +1,97 @@
 body{
     font-family: 'Josefin Sans', sans-serif;
-    background-color: rgb(238, 236, 236);
+    
 }
-section{
-    height: 500px;
 
+section{
+    height: 550px;
 }
+
 #topnav{
     text-align: right;
 }
+
 .first-area img{
     width: 500px;
 }
+
+.first-area img:hover{
+    transform: scale(1.1);
+}
+
 .first-area h1{
     font-size: 50px;
 }
+
 .text-color{
     color:#4CAF50
 }
+
 .second-area img{
-    width: 500px;
+    width: 400px;
 }
+
+.second-area img:hover{
+    transform: scale(1.1);
+}
+
 .half-page {
     height: 500px;
     width: 45%;
     float: left;
     padding: 2%;
 }
+
 .button{
-    background-color: #4CAF50; 
+    background:linear-gradient(#4CAF50, orange); 
     border-radius:5px ;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 25px;
-}  
+}
+
+.button:hover{
+    font-size: 30px;
+    background: gray;
+} 
+
 .my-experience{
     height: 600px;
     width: 100%;
-   
+    background-color: rgba(236, 226, 226, 0.911);
 }
+
 .my-experience img{
     height: 300px;
+    width: 400px;
 }
+
 .my-experience h2{
     text-align: center;
-    padding: 50px;
+    font-size: 40px;
 }
+
 .latest-project {
     float: left;
     height: 100px;
     width: 400px;
-    padding: 2%;
+    padding: 30px;
     margin: 20px;
 }
+
+.latest-project:hover{   
+    cursor: default;
+    transform: rotate(360deg);
+    transition: all 0.3s ease-in-out 0s;
+}
+
+#final-task{
+    height: 500px;
+}
+
 .contact{
     text-align: center;
     border-radius: 20px;
